@@ -2,7 +2,9 @@ AUX xterm-232-interix.patch 1092 RMD160 dbf0d7fe28690eafc669e4c279e2fee535410f31
 AUX xterm-248-interix.patch 1144 RMD160 f7b2473c6c01c6dc2ddcaee0a3a2abfd7f1f9ca1 SHA1 8c1b1a131f8efb073f22f0941a925761d5c5a5cb SHA256 903fe0bb3529d6c52986fa4ab5622bbe302cff3e0b1c1df11a0f616b4a2903e6
 DIST xterm-250.tgz 889052 RMD160 f61dcfbb60d4645bb80ffdc5339d11a92885e895 SHA1 bf72e4ab4f6f7aeb27db9667df4a85e151546c90 SHA256 2dfdf63135f838d3ad11584f0da18360f993305733df4df3255b952067b4fb28
 DIST xterm-255.tgz 909928 RMD160 13519cebc0870e1bf8815bdf8a4bfaf42684a467 SHA1 09bd7afe42afd14e36b5467bc2e8b6bdb86102e0 SHA256 75d5eecd05093eef94dc0912f461bbcd7a706dedfefddc2998136a064c14284a
+DIST xterm-256.tgz 910462 RMD160 9e65fe15ea0e049a1626cb15ca357d2905bd48bc SHA1 e71abcc1c63ba56eeab004608abe926dcebd2aa6 SHA256 26a755934d6544ddfe58256cb1bf2ca11985ee71767ef25b4e7218e7510c7088
 EBUILD xterm-250.ebuild 2296 RMD160 5c685d2b59dc6418fd53983e5dcbd095bf92a633 SHA1 7166897f09e3a2ef43540bbf8d2af5926284fbd1 SHA256 13dd1362cd5cc7fb145e644fc120d42a0673041d92d455877dbadaa0cc4c2a04
 EBUILD xterm-255.ebuild 2297 RMD160 662278bab67790b51172ef8fd6cc9b2cdd9afecf SHA1 48ba151ec9d8d466a1788a8c6027e1e876ef7e67 SHA256 ea7dbd9d85489068f7b4315f36620d9bad2c5f299fe00e9f4e9a152736a50d24
-MISC ChangeLog 38295 RMD160 c5f96b3848cd87c17c2c62a72c2022bbb54e6f98 SHA1 b87b3555a723d5756505f7329f582f15ed107345 SHA256 3a500034cc398a4a71b8c49fb80dc510d5d5085c1ae03fc381782e740744a617
+EBUILD xterm-256.ebuild 2297 RMD160 942ff467e9ab4a074bb16e9c5e003d55b03d5ecc SHA1 0dd3c80ba3489c75a381c3581dd3a9460771f9b2 SHA256 2f9718e67ded3e4d53971eaefa99843820db0c9c1083b593b69821470c2baf9d
+MISC ChangeLog 38411 RMD160 0a50af1737722f27f9d37d5f914a3669f419d3d0 SHA1 9389ce4a3c18b637f28550e95c8b2d0dbcf97b1a SHA256 ac80fb125098524574228b71dd77e573b571a027e3edbe8ce8294544a027cb9e
 MISC metadata.xml 429 RMD160 e6446bd38e29a16ec401640e7c06e3249c027bfa SHA1 64db85500803c328bd89acd2124ac7594dd9839f SHA256 9093fbdc5d374077cf0903a3b7b4aa0eeabc3e695226fa25e913079362ccfef9
